waybar/.config/waybar/style.css
* {
  min-height: 0;
  min-width: 0;
  font-family: "Space Mono Nerd Font", monospace;
  font-size: 16px;
  font-weight: 600;
}

window#waybar {
  transition-property: background-color;
  transition-duration: 0.2s;
  background-color: rgba(24, 24, 37, 0.6);
}

#workspaces button {
  padding: 0rem 0.6rem;
  margin: 0.4rem 0.15rem;
  border-radius: 0px;
  background-color: #181825;
  /* background-color: #1e1e2e; */
  color: #cdd6f4;
}

#workspaces button:hover {
  color: #1e1e2e;
  background-color: #cdd6f4;
}

#workspaces button.active {
  background-color: #1e1e2e;
  color: #89b4fa;
}

#workspaces button.urgent {
  background-color: #1e1e2e;
  color: #f38ba8;
}

#clock,
#pulseaudio,
#custom-logo,
#custom-power,
#custom-spotify,
#custom-notification,
#cpu,
#tray,
#memory,
#window,
#network,
#temperature,
#power-profiles-daemon,
#battery,
#mpris,
#backlight,
#mpd

/*
#idle_inhibitor,
*/
{
  padding: 0.3rem 0.7rem;
  margin: 0.4rem 0rem;
  background-color: #1e1e2e;
}

#mpd {
  color: #a6e3a1;
}

#mpris.playing {
  color: #74c7ec;
}

#mpris.paused {
  color: #9399b2;
}

#custom-sep {
  padding: 0px;
  color: #585b70;
}

window#waybar.empty #window {
  background-color: transparent;
}

#power-profiles-daemon {
	color: #b4befe;
	box-shadow: inset 0 -3px transparent;
}

#cpu {
  color: #94e2d5;
}

#memory {
  color: #cba6f7;
}

#clock {
  color: #74c7ec;
}

#clock.simpleclock {
  color: #89b4fa;
}

#window {
  color: #cdd6f4;
}

#pulseaudio {
  color: #b4befe;
}

#pulseaudio.muted {
  color: #a6adc8;
}

#custom-logo {
  color: #89b4fa;
}

#custom-power {
  color: #f38ba8;
}

#temperature {
  color: #f38ba8;
}

#temperature.critical {
	color: #f38ba8;
}

#battery {
	color: #a6e3a1;
}

#network {
	color: #b4befe;
}

#backlight {
	color: #b4befe;
}

tooltip {
  background-color: #181825;
  border: 2px solid #89b4fa;
}

